ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Accepted_Terms_and_Condition__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Terms_and_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Terms and Condition</label>
    <type>Checkbox</type>
</CustomField>