ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Agree_to_Receive_Emails__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Receive_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to Receive Emails</label>
    <type>Checkbox</type>
</CustomField>