ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Billing_Department__c.field-meta.xml
<CustomField>
    <fullName>Billing_Department__c</fullName>
    <label>Billing Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>