ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Estimated_Date_of_First_Order__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_of_First_Order__c</fullName>
    <label>Estimated Date of First Order</label>
    <type>Date</type>
</CustomField>