ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Grant_ID_and_or_Lab_Title__c.field-meta.xml
<CustomField>
    <fullName>Grant_ID_and_or_Lab_Title__c</fullName>
    <label>Grant ID and/or Lab Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>