ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/I_have_purchased_from_Strem_in_the_past__c.field-meta.xml
<CustomField>
    <fullName>I_have_purchased_from_Strem_in_the_past__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I have purchased from Strem in the past</label>
    <type>Checkbox</type>
</CustomField>