ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Lab_Start_Up_date__c.field-meta.xml
<CustomField>
    <fullName>Lab_Start_Up_date__c</fullName>
    <label>Lab Start-Up date</label>
    <type>Date</type>
</CustomField>