ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Lab_Status__c.field-meta.xml
<CustomField>
    <fullName>Lab_Status__c</fullName>
    <label>Lab Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starting a new lab</fullName>
            </value>
            <value>
                <fullName>Moving to a new institution</fullName>
            </value>
            <value>
                <fullName>Receiving your first research grant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>