ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/My_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>My_Job_Function__c</fullName>
    <label>My Job Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>