ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Number_of_Researchers_in_the_Lab__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Researchers_in_the_Lab__c</fullName>
    <label>Number of Researchers in the Lab</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>