ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company__c</fullName>
    <label>Shipping Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>