ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Shipping_Department__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Department__c</fullName>
    <label>Shipping Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>