ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Shipping_Email__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Email__c</fullName>
    <label>Shipping Email</label>
    <type>Email</type>
</CustomField>