ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Shipping_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Full_Name__c</fullName>
    <label>Shipping Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>