ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Shipping_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Job_Title__c</fullName>
    <label>Shipping Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>