ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Shipping_Website__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Website__c</fullName>
    <label>Shipping Website</label>
    <type>Url</type>
</CustomField>