ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Source_of_New_Funding__c.field-meta.xml
<CustomField>
    <fullName>Source_of_New_Funding__c</fullName>
    <label>Source of New Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>