ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/fields/Tax_Exempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Number__c</fullName>
    <label>Tax Exempt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>