ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/recordTypes/Ascensus.recordType-meta.xml
<RecordType>
    <fullName>Ascensus</fullName>
    <active>true</active>
    <businessProcess>Master Lead Process</businessProcess>
    <label>Ascensus</label>
</RecordType>