ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/recordTypes/New_Lab_Start_Up_Program.recordType-meta.xml
<RecordType>
    <fullName>New_Lab_Start_Up_Program</fullName>
    <active>true</active>
    <businessProcess>Master Lead Process</businessProcess>
    <label>New Lab Start Up Program</label>
</RecordType>