ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/recordTypes/Strem.recordType-meta.xml
<RecordType>
    <fullName>Strem</fullName>
    <active>true</active>
    <businessProcess>Strem Lead Process</businessProcess>
    <label>Strem</label>
</RecordType>