ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>notEqual</operation>
        <value>Ascensus Store</value>
    </filters>
    <label>All Leads</label>
</ListView>