ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/listViews/New_Lab_Start_Up_Program.listView-meta.xml
<ListView>
    <fullName>New_Lab_Start_Up_Program</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>New Lab Start Up Program</value>
    </filters>
    <label>New Lab Start-Up Program</label>
</ListView>