ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/listViews/Registration_FR.listView-meta.xml
<ListView>
    <fullName>Registration_FR</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Ascensus Store</value>
    </filters>
    <filters>
        <field>Lead_Type__c</field>
        <operation>equals</operation>
        <value>Store Registration</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>contains</operation>
        <value>Luxembourg,Malta,Moldova,Monaco,Montenegro,Netherlands,North Macedonia,Norway,Poland,Portugal,Romania,Russia,San Marino,Serbia,Slovakia,Slovenia,Spain,Sweden,Switzerland,Ukraine,United Kingdom</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>contains</operation>
        <value>Albania,Andorra,Armenia,Austria,Azerbaijan,Belarus,Belgium,Bosnia and Herzegovina,Bulgaria,Croatia,Cyprus,Czechia,Denmark,Estonia,Finland,France,Georgia,Germany,Greece,Hungary,Iceland,Ireland,Italy,Latvia,Liechtenstein,Lithuania</value>
    </filters>
    <label>Registration - FR</label>
</ListView>