ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/listViews/Registration_USA.listView-meta.xml
<ListView>
    <fullName>Registration_USA</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Ascensus Store</value>
    </filters>
    <filters>
        <field>Lead_Type__c</field>
        <operation>equals</operation>
        <value>Store Registration</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>equals</operation>
        <value>United States</value>
    </filters>
    <label>Registration - USA</label>
</ListView>