ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Lead/listViews/Strem_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Strem_Lead_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Strem Customer Service Queue</label>
    <queue>Strem_Customer_Service_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>